--- a/Codes/logistic_regression_practise.ipynb
+++ b/Codes/logistic_regression_practise.ipynb
@@ -22,15 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "D4b029YC7C-y"
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -45,16 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "4POXlqg47Ny3"
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('breast_cancer.csv')\n",
-    "X = dataset.iloc[:, 1:-1].values\n",
+    "dataset= pd.read_csv('breast_cancer.csv')\n",
+    "x = dataset.iloc[:, :-1].values\n",
     "y = dataset.iloc[:, -1].values"
    ]
   },
@@ -70,16 +64,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "WOQwyng57dp2"
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 752904      10       1 ...       5       4       1]\n",
+      " [1218860       1       1 ...       3       1       1]\n",
+      " [ 411453       5       1 ...       3       1       1]\n",
+      " ...\n",
+      " [1214092       1       1 ...       1       1       1]\n",
+      " [1303489       3       1 ...       2       1       1]\n",
+      " [ 378275      10       9 ...       7       7       1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1173347       1       1 ...       1       1       1]\n",
+      " [1156017       3       1 ...       2       1       1]\n",
+      " [ 706426       5       5 ...       4       3       1]\n",
+      " ...\n",
+      " [ 369565       4       1 ...       1       1       1]\n",
+      " [1313325       4      10 ...       9      10       1]\n",
+      " [1136142       2       1 ...       2       1       1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 4 4 2 2 2 4 2 2 4 2 4 2 2 2 4 4 4 2 2 2 4 2 4 4 2 2 2 4 2 4 4 2 2 2 4\n",
+      " 4 2 4 2 2 2 2 2 2 2 4 2 2 4 2 4 2 2 2 4 2 2 4 2 2 2 2 2 2 2 2 4 4 2 2 2 2\n",
+      " 2 2 4 2 2 2 4 2 4 2 2 4 2 2 4 2 4 2 4 4 4 2 4 4 4 2 2 2 4 4 2 2 4 4 2 2 4\n",
+      " 2 2 4 2 2 2 4 2 2 2 4 2 2 4 4 2 4 2 4 2 2 4 2 2 4 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 2 2 2 4 2 2 2 2 4 2 4 2 4 4 2 2 2 2 4 4 2 4 4 4 4 4 4 2 2 2 2 2 2 4 4 4\n",
+      " 2 2 2 4 2 2 4 4 2 4 2 2 4 4 2 2 2 2 2 2 2 2 2 2 4 2 2 2 2 2 4 4 2 4 2 2 2\n",
+      " 4 2 2 2 2 4 4 2 2 4 4 2 2 4 4 2 4 2 4 4 2 2 2 4 2 4 2 4 2 2 2 2 2 4 2 2 4\n",
+      " 2 2 4 2 2 2 2 2 4 2 2 4 2 4 2 2 4 4 4 2 2 2 2 2 2 4 4 2 2 2 2 2 2 2 4 2 2\n",
+      " 4 2 2 2 2 2 2 2 4 2 2 2 4 4 2 4 2 2 2 4 2 2 2 4 4 2 4 2 2 4 2 2 2 2 2 2 2\n",
+      " 4 4 4 4 2 4 2 4 2 4 4 4 2 2 4 2 2 2 2 4 4 2 2 2 4 2 2 4 2 2 2 2 4 4 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 4 2 4 2 2 2 2 2 2 4 4 4 4 2 2 4 2 4 2 4 2 2 2 2 4 2 4 2 2\n",
+      " 2 2 4 2 2 4 2 2 2 2 2 2 2 4 2 4 2 2 2 4 2 2 2 2 2 4 2 2 2 2 4 2 2 4 2 2 2\n",
+      " 2 4 4 2 2 2 2 4 2 2 4 2 2 2 2 4 4 2 4 2 4 2 2 2 4 4 4 2 2 2 2 2 2 2 2 4 4\n",
+      " 2 2 2 2 2 2 2 4 4 2 2 2 2 4 4 4 2 4 2 4 2 2 2 2 2 4 2 4 4 2 2 2 2 2 2 2 4\n",
+      " 2 2 2 4 2 2 4 4 4 2 4 4 4 2 2 2 4 2 4 2 2 4 2 4 4 4 2 2 2 4 2 4 4 4 2 2 2\n",
+      " 4 2 4 2 2 2 2 4 4 2 2 2 4 4 2 2 4 2 2 2 4 4 2 2 2 4 2 2 2 4 2 4 2 2 4 2 2\n",
+      " 2 2 4 4 2 2 4 4 2 2 4 4 4 2 2 4 2 2 2 2 2 4 2 4 4 2 2 2 2 4 2 2 2 2 4 2 4\n",
+      " 2 4 2 2 4 2 2 2 2 4 2 2 2 4 2 2 4 4 4 4 2 4 4 2 4 4 2 2 2 2 2 2 4 2 2 2 2\n",
+      " 4 4 2 4 4 4 2 2 4 4 2 2 2 2 2 2 4 2 2 4 2 2 4 2 2 2 2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_train)"
    ]
   },
   {
@@ -94,38 +181,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 101
-    },
-    "colab_type": "code",
-    "id": "9V-LgiUa78lX",
-    "outputId": "ce5e5660-1b7c-4750-dc12-837be0ea2fc5"
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
-       "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
-       "                   random_state=0, solver='lbfgs', tol=0.0001, verbose=0,\n",
-       "                   warm_start=False)"
+       "LogisticRegression(random_state=0)"
       ]
      },
-     "execution_count": 5,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 42,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "classifier = LogisticRegression(random_state = 0)\n",
-    "classifier.fit(X_train, y_train)"
+    "classifier = LogisticRegression(random_state=0)\n",
+    "classifier.fit(x_train, y_train)"
    ]
   },
   {
@@ -140,15 +213,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "1B4zQvOq8M7H"
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = classifier.predict(X_test)"
+    "y_pred = classifier.predict(x_test)"
    ]
   },
   {
@@ -163,23 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 50
-    },
-    "colab_type": "code",
-    "id": "5BN8qx6e8aNZ",
-    "outputId": "b7b0ba3d-3183-426c-f45a-72d5d8ddb075"
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[84  3]\n",
-      " [ 3 47]]\n"
+      "[[87  0]\n",
+      " [50  0]]\n"
      ]
     }
    ],
@@ -187,6 +248,26 @@
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.635036496350365"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(87+0)/(87+50+0+0)"
    ]
   },
   {
@@ -201,31 +282,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 50
-    },
-    "colab_type": "code",
-    "id": "waJZi8fw8m_2",
-    "outputId": "985787e6-54db-42ca-edde-950ade8d1ac6"
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 96.70 %\n",
-      "Standard Deviation: 1.97 %\n"
+      "Accuracy: 65.38 %\n",
+      "Standar Deviation: 0.51 %\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
-    "accuracies = cross_val_score(estimator = classifier, X = X_train, y = y_train, cv = 10)\n",
+    "accuracies = cross_val_score(estimator = classifier, X = x_train, y = y_train, cv = 10)\n",
     "print(\"Accuracy: {:.2f} %\".format(accuracies.mean()*100))\n",
-    "print(\"Standard Deviation: {:.2f} %\".format(accuracies.std()*100))"
+    "print(\"Standar Deviation: {:.2f} %\".format(accuracies.std()*100))"
    ]
   }
  ],
